# sc2ai

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.opencode/state/: codegraph-session-runtime.json
docs/: setup.md
docs/bitacora/: 2026-06-19.md  2026-06-20.md
docs/superpowers/plans/: 2026-06-20-economy-knowledge-intelligence.md  2026-06-20-fix-foundation-verification-warnings.md
docs/superpowers/specs/: 2026-06-20-fix-foundation-verification-warnings-design.md
openspec/changes/add-policy-shadow-telemetry/: design.md  proposal.md  tasks.md
openspec/changes/economy-knowledge-intelligence/: proposal.md
openspec/changes/sc2-foundation/: tasks.md
scripts/: analyze.py  analyze.sh  analyze_shadows.py  run.py  setup_maps.bat  setup_maps.sh  tune_strategies.py
src/bot/: core.py  decision.py  pressure.py  scout.py  strategy.py  upgrades.py
src/data/: counters.py  icons.py  units.py
src/ml/: README.md  events.py  observation.py  report.py
src/strategies/: __init__.py  bias_calculator.py  formula.py  loader.py  priority_engine.py  schema.py  types.py
src/utils/: logger.py  replay.py
tests/: test_analyze_shadows.py  test_attack_cleanup.py  test_bias_calculator.py  test_bot_logging.py  test_decision.py  test_early_game.py  test_engine_integration.py  test_env.py  test_events.py  test_formula.py  test_formula_prereqs.py  test_loader.py  test_logger.py  test_observation.py  test_pressure.py  test_priority_engine.py  test_readme.py  test_regression.py  test_report.py  test_report_ux.py  test_run_script.py  test_scout_metadata.py
(+153 files in other folders)
