[project]
name = "sc2ai"
version = "0.1.0"
description = "SC2 AI bot — Protoss macro player built with python-sc2. Recreational/academic project architected for future ML integration."
requires-python = ">=3.9"
dependencies = [
    "burnysc2",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
